<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.rcusapp.confessions">

    <TextView
        android:id="@+id/confession_heidelberg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:textSize="16sp"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:textColor="@color/colorMenuText"
        android:text="@string/confessions_heidelberg"
        android:background="@color/color_history"
        android:onClick=""/>

    <TextView
        android:id="@+id/confession_belgic"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:textSize="16sp"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:textColor="@color/colorMenuText"
        android:text="@string/confessions_belgic"
        android:background="@color/color_creeds"
        android:onClick=""/>

    <TextView
        android:id="@+id/confessions"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:textSize="16sp"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:textColor="@color/colorMenuText"
        android:text="@string/confessions_dort"
        android:background="@color/color_confessions"
        android:onClick=""/>

</LinearLayout>
